P lab 8 (#34)
* sql scripts added

* Db addition (#18)

* dbconfig added

* hikari provider added

* userDAO added

* auth service added

* spacemarine dao init

* first compilation

* Cache (#19)

* spaceMarineDAO updated, cache collection added

* remove sql added

* some problems corrected

* added collection interface

* collection interface implemented

* collection interface injected to commands

* corrected

* log_in command added

* Log in (#20)

* log_in and log_out added

* old log in is working

* insertion and updating in db work in memory no

* update works

* Many threads (#21)

* miltythread

* sm to string changed

* owner detects

* spacemarine corrcted

* multy thread

* all commands works

* Clients hierarhy (#22)

* parent added to db

* clear corrected

* hierarhy started

* hierarhy update works

* server config corrected

* schema runner added

* server status publish updated

* sign_in command added

* Denormal db (#23)

* mongo init

* mongodbprovider init

* mongo dao added

* smdao added

* mongo init

* owner reads perfectly

* remove and u[dates work

* reload data every 5 sec

* readme p_lab_7

* virtual threads started

* gui init

* mainWindow init

* login and signin dialog init

* locale added

* language changes

* table init

* log_in works

* heartbeat recreated

* buttons created

* polling init

* switch button init

* map switching init

* Buttons init (#24)

* add dialig init:

* some refactoring

* remove button init

* execute script button init

* clear button init

* clear corrected, some refactoting

* update button init

* info, help commands init

* UI (#25)

* auth init

* auth init

* scaling added

* some refactoring

* selecor corrected

* dialods updated

* spawn_client init

* remove client init

* Script runner (#26)

* script executer started

* dialof updated

* pink in chooser

* Drawing (#27)

* cancas rebuilt

* spaceMarines drow

* logout works:

* coordinates marins relative to map not to pixels

* marine